create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1130,7 +1130,7 @@ a {
   display: flex;
   padding-top: 12rem;
   padding-bottom: 3rem;
-  background-image: url("../../../assets/images/snapedit-1714630634989-1280x960.jpg");
+  background-image: url("../../../assets/images/snapedit-1714630634990-1280x960.jpeg");
 }
 .cid-ud0eUW2rEf .mbr-overlay {
   background-color: #2e481a;
