--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1868,7 +1868,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1942,7 +1942,7 @@ a {
 .cid-ucBXWmiGdQ {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #0c2c68;
+  background-color: #2e481a;
 }
 @media (max-width: 991px) {
   .cid-ucBXWmiGdQ .container {
@@ -2286,7 +2286,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2902,7 +2902,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3665,7 +3665,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3935,7 +3935,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 3rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -4281,7 +4281,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4911,7 +4911,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5166,7 +5166,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -5512,7 +5512,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5909,7 +5909,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -6255,7 +6255,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6525,7 +6525,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -6871,7 +6871,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7500,7 +7500,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7777,7 +7777,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -8123,7 +8123,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #a981a4;
+  background-color: #2e481a;
 }
 .cid-ucU9V9E2L9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8519,9 +8519,9 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
-  background-color: #0c2c68;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #2e481a;
 }
 @media (max-width: 991px) {
   .cid-ucBXWmiGdQ .container {
