create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1231,7 +1231,7 @@ a {
 .cid-ud2DI78eEL {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #1f6463;
+  background-color: #7787a5;
 }
 @media (min-width: 992px) {
   .cid-ud2DI78eEL .carousel {
@@ -1365,7 +1365,7 @@ a {
 .cid-ucWcCgsrxd {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/322935682-2006925079502495-5699045707814040328-n-2000x1500.jpg");
 }
 .cid-ucWcCgsrxd .mbr-fallback-image.disabled {
   display: none;
@@ -1473,7 +1473,7 @@ a {
   text-align: center;
 }
 .cid-uaAwE6jX4u .mbr-section-title {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-uaAxVB6t52 {
   padding-top: 2rem;
@@ -1522,8 +1522,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -1942,7 +1942,7 @@ a {
 .cid-ucBXWmiGdQ {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #0c2c68;
+  background-color: #2e481a;
 }
 @media (max-width: 991px) {
   .cid-ucBXWmiGdQ .container {
@@ -2359,7 +2359,7 @@ a {
 }
 .cid-uaX3FI2PYV {
   display: flex;
-  background-color: #1f6463;
+  background-color: #7787a5;
 }
 .cid-uaX3FI2PYV .mbr-fallback-image.disabled {
   display: none;
@@ -2409,12 +2409,12 @@ a {
 }
 .cid-uaX3FI2PYV .mbr-section-title {
   text-align: center;
-  color: #ffffff;
+  color: #232323;
 }
 .cid-uaX3FI2PYV .mbr-text,
 .cid-uaX3FI2PYV .mbr-section-btn {
   text-align: left;
-  color: #ffffff;
+  color: #000000;
 }
 .cid-ud2tNdUvIf {
   padding-top: 2rem;
@@ -2507,7 +2507,7 @@ a {
   text-align: center;
 }
 .cid-ud2tNdUvIf .mbr-section-title {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-ucVQubm6Jy {
   padding-top: 2rem;
@@ -2556,8 +2556,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -3270,7 +3270,7 @@ a {
   text-align: center;
 }
 .cid-ud2t43uNqZ .mbr-section-title {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ud1bA31iIh {
   padding-top: 2rem;
@@ -3319,8 +3319,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -3738,7 +3738,7 @@ a {
 }
 .cid-ubCNZjGPR1 {
   display: flex;
-  background-color: #fffcc0;
+  background-color: #0c2c68;
 }
 .cid-ubCNZjGPR1 .mbr-fallback-image.disabled {
   display: none;
@@ -3788,12 +3788,12 @@ a {
 }
 .cid-ubCNZjGPR1 .mbr-section-title {
   text-align: center;
-  color: #000000;
+  color: #ffffff;
 }
 .cid-ubCNZjGPR1 .mbr-text,
 .cid-ubCNZjGPR1 .mbr-section-btn {
   text-align: left;
-  color: #000000;
+  color: #ffffff;
 }
 .cid-ud2twmzwBv {
   padding-top: 2rem;
@@ -3935,8 +3935,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -4565,8 +4565,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -5117,7 +5117,7 @@ a {
   text-align: center;
 }
 .cid-ud2sHhhFj6 .mbr-section-title {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ud1c2CSZJi {
   padding-top: 2rem;
@@ -5166,8 +5166,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -5606,7 +5606,11 @@ a {
 .cid-ubiPMA5WKU {
   padding-top: 4rem;
   padding-bottom: 3rem;
-  background-color: #a981a4;
+  background-image: url("../../../assets/images/322935682-2006925079502495-5699045707814040328-n-826x620.jpg");
+}
+.cid-ubiPMA5WKU .mbr-overlay {
+  background: #0c2c68;
+  opacity: 0.6;
 }
 .cid-ubiPMA5WKU img,
 .cid-ubiPMA5WKU .item-img {
@@ -5674,7 +5678,7 @@ a {
 }
 .cid-ubiPMA5WKU .mbr-section-title,
 .cid-ubiPMA5WKU .mbr-section-head .mbr-section-btn {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ufbfMiSOPa {
   padding-top: 10rem;
@@ -5699,7 +5703,11 @@ a {
 .cid-ueB0fZ4TR4 {
   padding-top: 4rem;
   padding-bottom: 3rem;
-  background-color: #a981a4;
+  background-image: url("../../../assets/images/322935682-2006925079502495-5699045707814040328-n-2000x1500.jpg");
+}
+.cid-ueB0fZ4TR4 .mbr-overlay {
+  background: #0c2c68;
+  opacity: 0.5;
 }
 .cid-ueB0fZ4TR4 img,
 .cid-ueB0fZ4TR4 .item-img {
@@ -5767,7 +5775,7 @@ a {
 }
 .cid-ueB0fZ4TR4 .mbr-section-title,
 .cid-ueB0fZ4TR4 .mbr-section-head .mbr-section-btn {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ud2s6sHzSS {
   padding-top: 2rem;
@@ -5860,7 +5868,7 @@ a {
   text-align: center;
 }
 .cid-ud2s6sHzSS .mbr-section-title {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ud1cNtRBHr {
   padding-top: 2rem;
@@ -5909,8 +5917,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -6525,8 +6533,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
@@ -7589,12 +7597,12 @@ a {
   top: 0;
 }
 .cid-udZvYb5QYC .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-ubBhnWddlS {
   padding-top: 3rem;
   padding-bottom: 2rem;
-  background-color: #927496;
+  background-color: #7787a5;
 }
 .cid-ubBhnWddlS .mbr-fallback-image.disabled {
   display: none;
@@ -7695,7 +7703,7 @@ a {
 .cid-udjbZ1Wtem {
   padding-top: 1rem;
   padding-bottom: 3rem;
-  background-color: #edefeb;
+  background-color: #7787a5;
 }
 .cid-udjbZ1Wtem .mbr-iconfont {
   display: block;
@@ -7777,7 +7785,7 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   background-color: #0c2c68;
 }
@@ -8194,9 +8202,29 @@ a {
     left: -1rem;
   }
 }
+.cid-ue277QQTHs {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/img-20240423-wa0052-01.jpeg-22-1280x576.jpeg");
+}
+.cid-ue277QQTHs .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ue277QQTHs .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-ue277QQTHs .mbr-section-title {
+  color: #ffffff;
+}
 .cid-ucVRZxoH7h {
-  padding-top: 5rem;
-  padding-bottom: 2rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
@@ -8319,26 +8347,6 @@ a {
     display: none !important;
   }
 }
-.cid-ue277QQTHs {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-image: url("../../../assets/images/img-20240423-wa0052-01.jpeg-22-1280x576.jpeg");
-}
-.cid-ue277QQTHs .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-ue277QQTHs .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-ue277QQTHs .mbr-section-title {
-  color: #ffffff;
-}
 .cid-ucVDj2Lrhv {
   background-color: #ffffff;
   padding-top: 0px;
@@ -8351,7 +8359,10 @@ a {
 .cid-ub1EFu4RCX {
   padding-top: 0rem;
   padding-bottom: 0rem;
-  background-color: #ffb7b7;
+  background-color: #7787a5;
+}
+.cid-ub1EFu4RCX .row {
+  flex-direction: row-reverse;
 }
 .cid-ub1EFu4RCX .justify-content-center {
   align-items: center;
@@ -8519,8 +8530,8 @@ a {
   color: #232323;
 }
 .cid-ucBXWmiGdQ {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #0c2c68;
 }
 @media (max-width: 991px) {
