create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5681,8 +5681,8 @@ a {
   color: #ffffff;
 }
 .cid-ufbfMiSOPa {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
   background-image: url("../../../assets/images/kartun-735x245.jpg");
 }
 .cid-ufbfMiSOPa .mbr-fallback-image.disabled {
@@ -7597,7 +7597,7 @@ a {
   top: 0;
 }
 .cid-udZvYb5QYC .mbr-section-title {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-ubBhnWddlS {
   padding-top: 3rem;
@@ -7713,7 +7713,7 @@ a {
 }
 .cid-udjbZ1Wtem .card-wrapper {
   padding: 3rem;
-  background: #232323;
+  background: #ffffff;
   border-radius: 4px;
 }
 @media (max-width: 992px) {
@@ -7730,7 +7730,7 @@ a {
   color: #c37a7a;
 }
 .cid-udjbZ1Wtem .card-title {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-udjbZ1Wtem .mbr-text {
   color: #bbbbbb;
